--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 						<section class="split contact">
 							<section>
 								<h3>Phone</h3>
-								<p><a>(804) 244-6256</a></p>
+								<p><a href="tel:8042446256">(804) 244-6256</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a>edtwuanbowman@yahoo.com</a></p>
+								<p><a href="mailto:edtwuanbowman@yahoo.com">edtwuanbowman@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
