--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
 										<li><a href="https://github.com/Twuan/ecommercesite" class="button">View code</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<h2><a>Pac-Man</a></h2>
+									</header>
+									<div class="image fit">
+										<video controls autoplay muted>
+											<source src="videos/pacman.mp4" type="video/mp4">
+										</video>
+									</div>
+									<p>Java</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Twuan/pacman_java" class="button">View code</a></li>
+									</ul>
+								</article>
 					</div>
 
 				<!-- Footer -->
